# faster-like

./: .gitignore  CITATION.cff  CMakeLists.txt  README.md  extract.ipynb  gen.py  main.cc  plot.ipynb  queries.sql  run.sh
include/: fft.h  like.h  util.h
patterns/: 16.in  32.in  4.in  64.in  8.in
